2006-11-21  Akim Demaille  <demaille@gostai.com>

	test.sh is not to be shipped
	* tests/Makefile.am: Adjust.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Fix the tests
	* Makefile.am: Remove.
	Now libport.mk must only be included by the top-level Makefile.am.
	* tests/Makefile.am: Don't pass arbitrary -I, in particular
	do not pass -I??/libport since we include cstdlib.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Use svn-externals.mk
	* Makefile.am: here.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Use svn-externals.mk
	* Makefile.am: here.

2006-11-20  Akim Demaille  <akim@lrde.epita.fr>

	* Makefile.am: Use svn-externals.mk.

2006-11-16  Akim Demaille  <akim.demaille@gmail.com>

	containers.*
	* containers.hh, containers.hxx: New.
	* README, libport.mk: Adjust.

2006-11-15  Akim Demaille  <akim.demaille@gmail.com>

	cstring instead of string.hh
	* string.hh: Rename as...
	* cstring: this.
	* libport.mk: Adjust.
	Make the svn bits factorable.

2006-11-15  Akim Demaille  <akim.demaille@gmail.com>

	libport/string.hh
	* string.hh: New.
	* libport.mk: Adjust.

2006-11-13  Akim Demaille  <demaille@gostai.com>

	Adjust to libport/config.h
	* uffloat.cc: Prefix config.h symbols with LIBPORT_.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	Finish importing svn sugars
	* libport.mk: Stolen from build-aux.mk.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	libport is installed by everyone
	Requested by Matthieu Nottale: all the sdks should do that
	to make sure libport is available (liburbi needs not being
	already installed).
	* libport.mk, Makefile.am: Basically revert the previous patch.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	Only liburbi should install libport
	* libport.mk (libport_HEADERS, nodist_libport_HEADERS): Rename as...
	(libport_headers, nodist_libport_headers): these.
	(svn-up, svn-ci, EXTRA_HEADERS): New
	* Makefile.am (libport_HEADERS, nodist_libport_HEADERS): New.
