@@ -1,2 +1,2 @@
-#define URBI_UFLOAT_DOUBLE
+#define LIBPORT_URBI_UFLOAT_DOUBLE
 #include "common_ufloat1.cc"
