@@ -1,3 +1,3 @@
-#define URBI_UFLOAT_DOUBLE
-#define URBI_UFLOAT_TABULATED
+#define LIBPORT_URBI_UFLOAT_DOUBLE
+#define LIBPORT_URBI_UFLOAT_TABULATED
 #include "common_ufloat1.cc"
