@@ -1,2 +1,2 @@
-#define URBI_UFLOAT_FLOATING
+#define LIBPORT_URBI_UFLOAT_FLOATING
 #include "common_ufloat1.cc"
