@@ -1,2 +1,2 @@
-#define URBI_UFLOAT_FLOAT
+#define LIBPORT_URBI_UFLOAT_FLOAT
 #include "common_ufloat1.cc"
