@@ -1,2 +1,2 @@
-#define URBI_UFLOAT_LONG_LONG
+#define LIBPORT_URBI_UFLOAT_LONG_LONG
 #include "common_ufloat1.cc"
